--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,6 +53,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
+          registry-url: "https://registry.npmjs.org/"
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
