--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,4 +66,4 @@ jobs:
       - name: Publish to npm
         run: pnpm publish --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
