--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.18",
     "dotenv-cli": "^8.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "publishConfig": {
