--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
-    "dev": "dotenv -e .env -- sh -c 'pnpm dlx @modelcontextprotocol/inspector -e DATAMAKER_URL=\"$DATAMAKER_URL\" -e AUTOMATORS_AUTH_JWT=\"$AUTOMATORS_AUTH_JWT\" -e DATAMAKER_API_URL=\"$DATAMAKER_API_URL\" node build/index.js'",
+    "start": "node build/index.js",
+    "dev": "dotenv -e .env -- sh -c 'pnpm dlx @modelcontextprotocol/inspector -e PORT=\"$PORT\" -e DATAMAKER_URL=\"$DATAMAKER_URL\" -e AUTOMATORS_AUTH_JWT=\"$AUTOMATORS_AUTH_JWT\" -e DATAMAKER_API_URL=\"$DATAMAKER_API_URL\" node build/index.js'",
     "prepublishOnly": "pnpm build",
     "changeset": "changeset",
     "version": "changeset version",
@@ -33,7 +34,12 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@hono/mcp": "0.1.1",
+    "@hono/node-server": "1.18.2",
     "@modelcontextprotocol/sdk": "^1.11.3",
+    "dotenv": "17.2.1",
+    "hono": "4.9.1",
+    "node-fetch": "3.3.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
