--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
-    "start": "node build/index.js",
-    "dev": "dotenv -e .env -- sh -c 'pnpm dlx @modelcontextprotocol/inspector -e PORT=\"$PORT\" -e DATAMAKER_URL=\"$DATAMAKER_URL\" -e AUTOMATORS_AUTH_JWT=\"$AUTOMATORS_AUTH_JWT\" -e DATAMAKER_API_URL=\"$DATAMAKER_API_URL\" -e R2_TOKEN=\"$R2_TOKEN\" -e R2_ACCESS_KEY_ID=\"$R2_ACCESS_KEY_ID\" -e R2_SECRET=\"$R2_SECRET\" -e R2_URL=\"$R2_URL\" -e R2_BUCKET_NAME=\"$R2_BUCKET_NAME\" node build/index.js'",
+    "start": "dotenv -e .env -- node build/index.js",
+    "dev": "dotenv -e .env -- sh -c 'pnpm dlx @modelcontextprotocol/inspector -e PORT=\"$PORT\" -e DATAMAKER_URL=\"$DATAMAKER_URL\" -e AUTOMATORS_AUTH_JWT=\"$AUTOMATORS_AUTH_JWT\" -e DATAMAKER_API_URL=\"$DATAMAKER_API_URL\" -e S3_TOKEN=\"$S3_TOKEN\" -e S3_ACCESS_KEY_ID=\"$S3_ACCESS_KEY_ID\" -e S3_SECRET_ACCESS_KEY=\"$S3_SECRET_ACCESS_KEY\" -e S3_URL=\"$S3_URL\" -e S3_BUCKET_NAME=\"$S3_BUCKET_NAME\" node build/index.js'",
     "prepublishOnly": "pnpm build",
     "changeset": "changeset",
     "version": "changeset version",
