--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "dotenv": "17.2.1",
     "hono": "4.9.1",
     "node-fetch": "3.3.2",
+    "xmldom": "0.6.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.18",
+    "@types/xmldom": "0.1.34",
     "dotenv-cli": "^8.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
