--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "17.2.1",
     "hono": "4.9.1",
     "node-fetch": "3.3.2",
+    "tiktoken": "^1.0.22",
     "xmldom": "0.6.0",
     "zod": "^3.24.4"
   },
